Login feature on frontend now gets user info from backend (password is user name, but it works)
